resources/assets/sass/app.scss
@import "variables";

// External frameworks
@import "node_modules/bulma/bulma";

// Internal imports
@import "styleguide";
@import "mixins";
@import "transitions";
@import "./views/login";

// Helper classes

.show {
	display: block;
	visibility: visible;
}

.hidden {
	display: none;
	visibility: hidden;
}

.subsection {
	margin: 2em 0;
}

.full-height {
	height: 100%;
	min-height: 100%;
}

// Layout
$navbar-height: 3.5rem;
$layout-left-max-width: 600px;
$layout-left-inside-width: 200px;
$layout-main-width: 660px;
$layout-right-width: 400px;

$three-column-left-flex: 4;
$three-column-main-flex: 7;
$three-column-right-flex: 5;

html, body {
	height: 100%;
	min-height: 100%;
}

#app {
	height: 100%;
	min-height: 100%;
	max-height: 100%;
	display: flex;
	flex-direction: column;
}

.wnl-main {
	display: flex;
	flex: 1;
	max-height: -webkit-calc(100% - (#{$navbar-height} + 5px));
	max-height: -moz-calc(100% - (#{$navbar-height} + 5px));
	max-height: calc(100% - (#{$navbar-height} + 5px));
}

.wnl-app-layout {
	align-items: stretch;
	display: flex;
	flex: 1;
}

.wnl-left {
	display: flex;
	flex: $three-column-left-flex;
	justify-content: flex-end;
	max-width: 500px;
}

.wnl-middle {
	flex: $three-column-main-flex;
	max-width: 800px;
	padding: 0;
}

.wnl-right {
	display: flex;
	flex: $three-column-right-flex;
	padding: 0 20px;
}

.wnl-app-layout-left {
	border-right: $border-light-gray;
	padding: 20px 0;
}

.wnl-app-layout-main {
	flex: $three-column-main-flex;
	height: 100%;
	max-width: 800px;
	overflow-y: hidden;
	padding: 0;
	position: relative;
}

.wnl-app-layout-right {
	border-left: $border-light-gray;
	overflow-y: auto;
	padding-left: 20px;
}

.wnl-left-content {
	float: right;
	width: 280px;
	padding: 0 20px;
}

.wnl-right-content {
	padding: 0 20px;
}

.scrollable-main-container {
	height: 100%;
	overflow-y: auto;
	padding: 20px;
}

// Navigation

.navbar-default {
	background-color: $background-color-default;
}

.navbar-brand-image {
	max-height: 25px;
}

.footer {
	background-color: $background-color-default;
	border-top: $border-light-gray;
	margin: 5em 0 0;
}

// Screens
.wnl-screen-title {
	border-bottom: $border-light-gray;
}

// Notifications
.swal2-spacer {
	background: transparent;
}

.wnl-alert {
	font-family: $font-family-sans-serif !important;

	.swal2-icon {
		margin: 20px auto 15px !important;
	}

	.swal2-title {
		font-weight: 400 !important;
	}
}

// Payment

.payment-content {

	.text-danger {
		font-size: $font-size-minus-1;
		font-weight: $font-weight-bold;
	}
}

#payment-steps {
	margin-bottom: 3em;
}

.payment-step {
	align-items: center;
	border-color: $color-white-transparent;
	color: $color-white-transparent;
	display: flex;
	flex-direction: column;
	text-align: center;

	&.is-active {
		border-color: $color-white;
		color: $color-white;
	}

	&.is-current {

		.payment-step-count {
			@include glow;
		}

		.payment-step-text {
			font-weight: $font-weight-black;
		}
	}
}

.payment-step-count {
	border: 2px solid;
	border-radius: $border-radius-full;
	display: block;
	font-size: $font-size-plus-5;
	font-weight: $font-weight-black;
	line-height: 1.5em;
	margin-bottom: 10px;
	height: 1.5em;
	width: 1.5em;
}

.payment-step-text {
	font-size: $font-size-minus-1;
}

.onsite-plus {
	display: block;
	font-size: $font-size-plus-7;
	text-align: center;
	width: 100%;
}

.sublist-group {
	list-style-type: disc;
	margin: 5px 30px 15px 30px;
}

/* Firefox hack :/ */
@-moz-document url-prefix() {
	.wnl-chat-content {
		min-height: 0;
	}
}

